lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:6: error: type mismatch;
 found   : Double
 required: Int
  			segment(0)=liste(i).x
                                            ^Lander:7: error: type mismatch;
 found   : Double
 required: Int
  			segment(1)=liste(i+1).x
                                              ^Lander:14: error: not found: value segment
  	var debut=segment(0)
                  ^Lander:15: error: not found: value segment
  	var fin = segment(1)
                  ^