lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.code
  override def initialize():Array[Int]= {
  	val liste=getSol()
  	var segment = new Array[Int](2)
  	for (i<- 0 to liste.length-2) {
  		if (liste(i).y==liste(i+1).y) {
  			segment(0)=liste(i).x
  			segment(1)=liste(i+1).x
  		}
  	}
  	return segment
  }

  override def step() {
  	var debut=segment(0)
  	var fin = segment(1)
  	if (getX>debut && getX<fin) {
  		if (getVitesseY()<(-9)) {
			setPousseeDesiree(4)	
		} else {
			setPousseeDesiree(0)
		}	
  	} else { 
  		if (getX<debut) {
  			setAngleDesire(-45)
  		} else {
  			setAngleDesire(45)
  		}
  		
  			setPousseeDesiree(2)
  	}
  	
  }
